# read-osm-rs

./: Cargo.toml
data/: .gitignore
src/: main.rs
