[package]
name = "read-osm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
geo = "0.27.0"
indicatif = "0.17.7"
itertools = "0.12.0"
osmpbfreader = "0.16.1"
polyline = "0.10.1"
reqwest = { version = "0.11.23", features = ["blocking"] }
serde_json = "1.0.111"
